--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,9 +15,12 @@
 <body>
 
     <!-- As a heading -->
-    <nav class="navbar bg-light d-flex justify-content-between mx-5">
-        <span class="navbar-brand mb-0 h1">家庭記帳本</span>
-        <a class="btn btn-outline-dark btn-sm" href="/users/logout">Logout</a>
+    <nav class="navbar bg-light d-flex align-items-center">
+        <div class="d-flex justify-content-between">
+            <span class="navbar-brand mb-0 h1">家庭記帳本</span>
+            <a class="btn btn-outline-dark btn-sm" href="/users/logout">Logout</a>
+        </div>
+
     </nav>
 
 
