--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,11 +1,44 @@
 <form action="records/new" method="post">
-    <div class="row g-3 align-items-center">
-        <div class="col-auto">
-            <label for="name" class="col-form-label">名稱</label>
+    <div class="row g-3 align-items-center mx-5">
+        <div class="column">
+            <div class="col-auto">
+                <label for="name" class="col-form-label">名稱</label>
+            </div>
+            <div class="col-auto">
+                <input name="name" type="text" id="name" class="form-control" required>
+            </div>
+
+            <div class="col-auto">
+                <label for="date" class="col-form-label">消費日期</label>
+            </div>
+            <div class="col-auto">
+                <input name="date" type="date" id="date" class="form-control" required>
+            </div>
+
+            <div class="col-auto">
+                <label for="amount" class="col-form-label">消費金額</label>
+            </div>
+            <div class="col-auto">
+                <input name="amount" type="number" id="amount" class="form-control" required>
+            </div>
+
+            <div class="col-auto">
+                <label class="col-form-label" for="inputGroupSelect01">消費類別</label>
+            </div>
+            <div class="input-group mb-3">
+
+                <select class="form-select" id="inputGroupSelect01">
+                    <option selected>請選擇</option>
+                    <option value="1" name="category">家居物業</option>
+                    <option value="2" name="category">交通出行</option>
+                    <option value="3" name="category">休閒娛樂</option>
+                    <option value="4" name="category">餐飲食品</option>
+                    <option value="5" name="category">其他</option>
+                </select>
+            </div>
+
         </div>
-        <div class="col-auto">
-            <input type="text" id="name" class="form-control" required>
-        </div>
+        <button type="submit" class="btn btn-success">新增支出</button>
     </div>
-    <button type="submit">新增支出</button>
+
 </form>
