feat: add recordSeeder

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,7 @@
                 類別
             </button>
             <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">全部顯示</a></li>
                 <li><a class="dropdown-item" href="#">家居物業</a></li>
                 <li><a class="dropdown-item" href="#">交通出行</a></li>
                 <li><a class="dropdown-item" href="#">休閒娛樂</a></li>
@@ -17,15 +18,12 @@
         <div>
             <span>總金額</span>
             <div id="totalAmount">
-
             </div>
 
             <div id="statement">
-
             </div>
             <a href="/records/new" class="btn btn-success">新增支出</a>
         </div>
-
     </div>
 
 
