--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,25 @@
-<h1>HIIIIIIIIIIIIIIIIIIIIII</h1>
+<h1 class="restaurant-show-title">Login</h1>
+<div class="container col-6 mx-auto">
+    <form action="/users/login" method="POST">
+        <div class="mb-3">
+            <label for="email" class="form-label">Email address</label>
+            <input name="email" type="email" class="form-control" id="email" aria-describedby="email"
+                placeholder="abc@example.com" value="{{email}}">
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input name="password" type="password" class="form-control" id="password" placeholder="password"
+                value="{{password}}">
+        </div>
+        <div class="mt-3 d-grid gap-2">
+            <button type="submit" class="btn btn-success btn-block ">Login</button>
+            <a href="/auth/facebook" class="btn btn-info btn-block ">FaceBook Login</a>
+        </div>
+    </form>
+
+    <div class="d-flex justify-content-center mt-3">
+        <h5>No Account yet? </h5><a href="/users/register">
+            <h5 class="mx-3">Register Now!</h5>
+        </a>
+    </div>
+</div>
