--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,4 +1,4 @@
-<form action="records/new" method="post">
+<form action="/" method="post">
     <div class="row g-3 align-items-center mx-5">
         <div class="column">
             <div class="col-auto">
@@ -29,11 +29,11 @@
 
                 <select class="form-select" id="inputGroupSelect01">
                     <option selected>請選擇</option>
-                    <option value="1" name="category">家居物業</option>
-                    <option value="2" name="category">交通出行</option>
-                    <option value="3" name="category">休閒娛樂</option>
-                    <option value="4" name="category">餐飲食品</option>
-                    <option value="5" name="category">其他</option>
+                    <option value="0" name="categoryId">家居物業</option>
+                    <option value="1" name="categoryId">交通出行</option>
+                    <option value="2" name="categoryId">休閒娛樂</option>
+                    <option value="3" name="categoryId">餐飲食品</option>
+                    <option value="4" name="categoryId">其他</option>
                 </select>
             </div>
 
