--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,14 +15,12 @@
 <body>
 
     <!-- As a heading -->
-    <nav class="navbar bg-light d-flex align-items-center">
-        <div class="d-flex justify-content-between">
-            <span class="navbar-brand mb-0 h1">家庭記帳本</span>
-            <a class="btn btn-outline-dark btn-sm" href="/users/logout">Logout</a>
-        </div>
-
-    </nav>
-
+    <a class="navbar-brand" href="/">
+        {{#if isAuthenticated}}<strong>{{user.name}}的{{/if}}家庭記帳本</strong>
+    </a>
+    {{#if isAuthenticated}} <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+    {{else}}<a href="/users/login" class="btn btn-outline-light">Login</a>
+    {{/if}}
 
     {{{body}}}
     <!-- JavaScript Bundle with Popper -->
