feat: add alert flash message

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
 <h1 class="restaurant-show-title">Login</h1>
-
+{{>message}}
 <div class="container col-6 mx-auto">
     <form action="/users/login" method="POST">
         <div class="mb-3">
