--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,4 +1,4 @@
-<form action="/" method="post">
+<form action="/records/new" method="post">
     <div class="row g-3 align-items-center mx-5">
         <div class="column">
             <div class="col-auto">
