--- a/views/new.hbs
+++ b/views/new.hbs
@@ -27,7 +27,7 @@
             </div>
             <div class="input-group mb-3">
 
-                <select class="form-select" id="inputGroupSelect01">
+                <select class="form-select" id="inputGroupSelect01" name="categoryId">
                     <option selected>請選擇</option>
                     <option value="0" name="categoryId">家居物業</option>
                     <option value="1" name="categoryId">交通出行</option>
