--- a/save_to_repair/views/index.hbs
+++ b/save_to_repair/views/index.hbs
@@ -6,12 +6,12 @@
     {{!--select different category--}}
     <form action="/category" method="POST">
         <select class="form-select" id="inputGroupSelect01" name="categoryId" onchange="this.form.submit()">
-            <option value="-1" {{#ifEqual this.categoryId -1}}selected{{/ifEqual}}>全部類別</option>
-            <option value="0" {{#ifEqual this.categoryId 0}}selected{{/ifEqual}}>家居物業</option>
-            <option value="1" {{#ifEqual this.categoryId 1}}selected{{/ifEqual}}>交通出行</option>
-            <option value="2" {{#ifEqual this.categoryId 2}}selected{{/ifEqual}}>休閒娛樂</option>
-            <option value="3" {{#ifEqual this.categoryId 3}}selected{{/ifEqual}}>餐飲食品</option>
-            <option value="4" {{#ifEqual this.categoryId 4}}selected{{/ifEqual}}>其他</option>
+            <option value="-1">全部類別</option>
+            <option value="0">家居物業</option>
+            <option value="1">交通出行</option>
+            <option value="2">休閒娛樂</option>
+            <option value="3">餐飲食品</option>
+            <option value="4">其他</option>
         </select>
     </form>
 
@@ -19,7 +19,7 @@
         {{!--totalAmount--}}
         <span>總金額</span>
         <div id="totalAmount">
-            <h1>{{this.totalAmount}}</h1>
+            <h1>{{this.totalAmount}}元</h1>
         </div>
 
         <div class="row mt-3 mb-3 inline">
@@ -55,8 +55,11 @@
                                 </button>
                             </a>
                             <form action="./records/{{this._id}}?_method=DELETE" method="POST">
-                                <button type="input" class="btn btn-outline-danger">Delete</button>
+                                <button type="submit" class="btn btn-outline-danger">
+                                    Delete
+                                </button>
                             </form>
+
                         </li>
                         {{/each}}
                     </ul>
