--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,12 +16,15 @@
 
 <body>
     <!-- As a heading -->
-    <a class="navbar-brand" href="/">
-        {{#if isAuthenticated}}<strong>{{user.name}}的{{/if}}家庭記帳本</strong>
-    </a>
-    {{#if isAuthenticated}} <a href="/users/logout" class="btn btn-outline-light">Logout</a>
-    {{else}}<a href="/users/login" class="btn btn-outline-light">Login</a>
-    {{/if}}
+    <div class="d-flex justify-content-between mt-5 mx-5">
+        <a class="navbar-brand" href="/">
+            {{#if isAuthenticated}}<strong>{{user.name}}的{{/if}}家庭記帳本</strong>
+        </a>
+        {{#if isAuthenticated}} <a href="/users/logout" class="btn btn-outline-dark">Logout</a>
+        {{else}}<a href="/users/login" class="btn btn-outline-dark">Login</a>
+        {{/if}}
+    </div>
+
 
 
     {{{body}}}
